# teaching_ml

./: .gitignore  README.md  pyproject.toml
playground/LJ/: lj.py
playground/gas/: gas.py
playground/gaussian_function/: gaussian.py
playground/linear/: linear.py
src/constants/: constants.py
src/data_generation/: abscissa_gen.py  gases.py  noise.py  potentials.py
src/model/: linear_regression.py  mlp.py
src/plotting/: plot2D.py
