[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "teaching_ml"
version = "0.1.0"
description = "Teaching ML utilities for data generation and plotting"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.7",
]

[tool.setuptools.packages.find]
where = ["src"]
